--- a/styles.css
+++ b/styles.css
@@ -40,20 +40,23 @@ body {
     margin: 0;
 } */
 
-#data {
-    width: 250px;
-    height: 380px;
-    border: 10px solid dodgerblue;
+/* #data {
+    margin: 0 auto;
+    width: 500px;
+    height: 400px;
+    border: 10px solid rgb(255, 173, 30);
     border-radius: 16px;
     margin: 10px 30px;
     background-color: dodgerblue;
     opacity: 0.85;
     font-size: 1.1em;
-}
+} */
 
 #temperature {
     font-size: 4.0em;
     margin-left: 10px;
+    color: black;
+    margin:0 auto
 }
 
 #degreeSymbol {
